--- a/source/dev/_/parts/youtube.pug
+++ b/source/dev/_/parts/youtube.pug
@@ -1,4 +1,4 @@
-.youtube
+.youtube(class=classYoutube)
 	.case
 		.youtube__title.h1 Ведём #[img(src="_/uploads/youtube-icon.png" alt="")] YouTube канал #[br] по строительству с 2017 года
 		.youtube__subtitle.h2 и знаем все подводные камни
