--- a/source/dev/_/sys/css/style.css
+++ b/source/dev/_/sys/css/style.css
@@ -291,6 +291,57 @@ path, circle, rect, line {
   opacity: 0.2;
 }
 
+.textarea__wrap {
+  position: relative;
+}
+.textarea__label {
+  font-size: 14px;
+  opacity: 0.7;
+  margin-bottom: 12px;
+}
+.textarea__area {
+  width: 100%;
+  font-family: "Manrope", sans-serif;
+  color: #484e51;
+  background-color: transparent;
+  resize: none;
+}
+.textarea__area::placeholder {
+  opacity: 0.8;
+  color: #484e51;
+}
+.textarea__icon {
+  position: absolute;
+  top: 50%;
+  right: 30px;
+  width: 12px;
+  font-size: 0;
+  transform: translateY(-50%);
+}
+.textarea.--md .textarea__area {
+  font-size: 14px;
+  height: 140px;
+  padding: 25px 29px;
+}
+.textarea.--icon .textarea__area {
+  padding-right: 55px;
+}
+.textarea.--bg-white .textarea__area {
+  border-radius: 5px;
+  background-color: #fff;
+}
+.textarea.--bg-white .textarea__icon svg path {
+  opacity: 0.25;
+}
+.textarea.--bg-gray .textarea__area {
+  border-radius: 5px;
+  background-color: #f4f4f4;
+  box-shadow: inset 4px 4px 10px rgba(0, 0, 0, 0.05);
+}
+.textarea.--bg-gray .textarea__icon svg path {
+  opacity: 0.2;
+}
+
 .select {
   z-index: 5;
   position: relative;
@@ -1826,6 +1877,9 @@ sup {
   transform: translateX(-50%);
 }
 
+.fix.--pb {
+  padding-bottom: 130px;
+}
 .fix__content {
   padding-top: 115px;
   padding-bottom: 60px;
@@ -1967,6 +2021,12 @@ sup {
 .form__wrap {
   display: flex;
   flex-wrap: wrap;
+}
+.form__textarea {
+  width: calc(100% - 30px);
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 20px;
 }
 .form__policy {
   opacity: 0.5;
@@ -3648,6 +3708,9 @@ sup {
   padding-bottom: 120px;
   background-color: #f4f4f4;
 }
+.youtube.--no-bg {
+  background-color: transparent;
+}
 .youtube__title {
   text-align: center;
   margin-left: auto;
@@ -4278,6 +4341,208 @@ sup {
   top: -60px;
 }
 .order__bg img {
+  object-position: center bottom;
+}
+
+.about {
+  padding-bottom: 580px;
+  overflow: hidden;
+  background-color: #f4f4f4;
+}
+.about__title {
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 20px;
+  margin-bottom: 110px;
+}
+.about__item {
+  width: calc(100% / 4);
+  padding: 0 10px 45px;
+  border-radius: 8px;
+  background-color: #ffffff;
+  box-shadow: 0 3px 60px rgba(0, 0, 0, 0.05);
+}
+.about__item:nth-of-type(4) .about__icon {
+  left: 7px;
+}
+.about__icon {
+  position: relative;
+  margin-top: -42px;
+  height: 98px;
+  margin-bottom: 8px;
+}
+.about__icon img {
+  margin-left: auto;
+  margin-right: auto;
+}
+.about__name {
+  font-size: 16px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 0.32px;
+  text-align: center;
+  text-transform: uppercase;
+  margin-bottom: 8px;
+}
+.about__text {
+  opacity: 0.8;
+  line-height: 23px;
+  text-align: center;
+}
+.about__text sup {
+  font-size: 0.5em;
+}
+.about__img {
+  position: absolute;
+  bottom: -75px;
+  left: 50%;
+  width: 1231px;
+  transform: translateX(-50%);
+}
+
+.breadcrumbs {
+  padding-top: 35px;
+}
+.breadcrumbs__list {
+  display: inline;
+}
+.breadcrumbs__item {
+  display: inline;
+  position: relative;
+  font-size: 11px;
+  letter-spacing: 0.5px;
+  text-transform: uppercase;
+}
+.breadcrumbs__item:after {
+  content: "/";
+  margin-left: 5px;
+  margin-right: 5px;
+}
+.breadcrumbs__item:first-of-type {
+  margin-left: 20px;
+}
+.breadcrumbs__item:first-of-type:before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: -20px;
+  margin-top: -1px;
+  transform: translateY(-50%);
+  width: 10px;
+  height: 10px;
+  background: url("../imgs/house.png") no-repeat center;
+}
+.breadcrumbs__item:last-of-type:after {
+  display: none;
+}
+.breadcrumbs__text {
+  display: inline;
+}
+.breadcrumbs__text {
+  color: #b7babb;
+}
+.breadcrumbs__link:hover {
+  color: #2a88d1;
+}
+
+.team {
+  padding-top: 100px;
+  padding-bottom: 120px;
+  background-color: #f4f4f4;
+}
+.team__title {
+  text-align: center;
+  margin-bottom: 50px;
+}
+.team__list {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.team__item {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  position: relative;
+  width: calc(100% / 4 - 30px);
+  min-height: 578px;
+  margin-left: 15px;
+  margin-right: 15px;
+  border-radius: 8px;
+  padding: 48px 15px 30px;
+  text-align: center;
+  background-color: #ffffff;
+  box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08);
+}
+.team__name {
+  font-size: 16px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
+.team__position {
+  opacity: 0.8;
+  font-size: 13px;
+  line-height: 20px;
+  color: #111111;
+}
+.team__btn {
+  max-width: 100%;
+  margin: auto 20px 0;
+}
+.team__img {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+}
+
+.questions {
+  padding-top: 0;
+  overflow: hidden;
+}
+.questions__img-wrap {
+  width: 675px;
+  max-height: 880px;
+  position: relative;
+}
+.questions__person {
+  position: absolute;
+  top: 85px;
+  left: 15px;
+}
+.questions__img {
+  width: 561px;
+  max-height: 910px;
+  overflow: hidden;
+  transform: scale(-1, 1);
+  margin-left: -90px;
+}
+.questions__content {
+  width: 100%;
+  max-width: 665px;
+  padding-top: 52px;
+  margin-left: -170px;
+}
+.questions__title {
+  margin-bottom: 9px;
+}
+.questions__subtitle {
+  margin-bottom: 13px;
+}
+.questions__form {
+  margin-top: 70px;
+  margin-left: -400px;
+  padding-top: 80px;
+  padding-bottom: 75px;
+  padding-left: 400px;
+  padding-right: 100px;
+}
+.questions__form .form__btn.btn {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.questions__bg {
   object-position: center bottom;
 }
 
