--- a/source/dev/_/blocks/footer/footer.pug
+++ b/source/dev/_/blocks/footer/footer.pug
@@ -17,9 +17,9 @@ footer.footer
 				.footer__links.links
 					ul
 						li
-							a(href="") Вызвать замерщика
+							a(href="javascript:;" data-fancybox="" data-src="#modal-call-measurer") Вызвать замерщика
 						li
-							a(href="") Калькулятор стоимости
+							a(href="#calc") Калькулятор стоимости
 
 				.footer__contacts
 					.footer__phone.phone #[a(href="tel:+74951197437") +7 (495) 119-74-37]
