--- a/source/dev/_/pages/404/404.pug
+++ b/source/dev/_/pages/404/404.pug
@@ -9,12 +9,12 @@ block vars
 block content
 	.page404.first-slide
 		.case
-			.page404__head
-				.page404__count 404
-				.page404__img
-					img(src="_/uploads/" alt="")
-			.page404__title.h2 ошибка
-			.page404__subtitle.h2 Извините, такой страницы еще не существует
-			.page404__controls
-				a.page404__btn.btn.--sm.--bg-white(href="index.html") Перейдите на главную страницу
-				.page404__desc или любой другой раздел
+			.page404__wrap
+				.page404__head
+					.page404__img
+						img(src="_/uploads/404.png" alt="")
+				.page404__title.h2 ошибка
+				.page404__subtitle.h3 Извините, такой страницы еще не существует
+				.page404__controls
+					a.page404__btn.btn.--sm.--bg-white(href="index.html") Перейдите на главную страницу
+					.page404__desc или любой другой раздел
