--- a/source/dev/_/pages/article/article.pug
+++ b/source/dev/_/pages/article/article.pug
@@ -1,56 +1,66 @@
 extends ../../templates/default
 block vars
 	-
-		title = ""
+		title = "Как правильно делать механизированную штукатурку?"
 		breadcrumbs = [
 			['Главная', 'index.html'],
+			['Статьи', 'articles.html'],
 			[title]
 		]
 block content
-	.article
+	.article.first-slide
 		.case
 			+breadcrumbs('article__breadcrumbs')
-			.article__text.t1
-				h1 Как правильно делать #[br]механизированную штукатурку?
-				p #[a(href="") Механизированная штукатурка]  — это нанесение слоя раствора с помощью штукатурной станции. Использование малогабаритной мобильной машины в 4 раза в сравнении с ручной работой ускоряет наброс и первичное выравнивание материала. Мощная модель, обслуживаемая двумя рабочими (оператор и подсобник), за одну смену закрывает объем, на который бригаде штукатуров из 5 человек понадобится 3 – 4 дня.
-				p Фасадная и внутренняя механизированная штукатурка дает возможность выравнивать стены по классам Q1 – Q3 без дополнительной шпаклевки. Экономический эффект метода проявляется даже на объектах небольшой площади. В среднем, клиент получает готовые поверхности под покраску или поклейку обоев в 3 раза быстрее и на 30 % дешевле, чем при заказе ручной штукатурки.
-				h2 Особенности машинной штукатурки
-				p Кроме нанесения раствора с помощью машины в комплекс механизированной штукатурки входит ряд ручных операций, почти идентичных тем, что составляют традиционную технологию. #[strong Однако, на всех этапах можно выделить технические и организационные особенности, определяемые:]
-				ul
-					li #[strong Используемым оборудованием] — от характеристик штукатурных станций зависит производительность бригады, ее состав, #[br]а также сфера применения (площадь объектов, внутренняя или наружная отделка).
-					li #[strong Свойствами специализированных сухих смесей] — они разработаны для механизированной штукатурки и отличаются повышенной #[br]пластичностью и (для отдельных марок) увеличенным временем схватывания в сочетании с нормальным или сокращенным #[br]сроком высыхания.
-					li #[strong Методикой бригадной работы] — в ее состав входят оператор и 1 – 4 штукатура, специализирующихся на определенном типе объектов #[br](большие и средние объемы с выполнением отделки по классу Q1, либо средние и небольшие — по классам Q2 и Q3).
-				h2 Достоинства механизированной штукатурки
-				p Стоимость отделочных работ составляет от 8% до 15% итоговых сметных сумм на капитальное строительство. В рамках реноваций и ремонтов отделка #[br]может занимать до 90% всех расходов. Поэтому снижение материалоемкости и доли дорогостоящего ручного трудам — один из самых #[br]мощных факторов #[br]экономической эффективности как для строителей, так и для владельцев недвижимости. 
-				blockquote
-					h2 заголовок сноска
-					p Плоскость стены после работы штукатурной станции выглядит намного ровнее и аккуратнее, чем после первых двух ручных операций оштукатуривания. 
-				h2 Достоинства механизированной штукатурки
-				p Стоимость отделочных работ составляет от 8% до 15% итоговых сметных сумм на капитальное строительство. В рамках реноваций и ремонтов отделка может занимать до 90% всех расходов. Поэтому снижение материалоемкости и доли дорогостоящего ручного трудам — один из самых мощных факторов экономической эффективности как для строителей, так и для владельцев недвижимости. 
+			.article__content
+				.article__img
+					img(src="_/uploads/article-sample.png" alt="")
+				.article__text.t1
+					h1 Как правильно делать #[br]механизированную штукатурку?
+					p.--md #[a(href="") Механизированная штукатурка]  — это нанесение слоя раствора с помощью штукатурной станции. Использование малогабаритной мобильной машины в 4 раза в сравнении с ручной работой ускоряет наброс и первичное выравнивание материала. Мощная модель, обслуживаемая двумя рабочими (оператор и подсобник), за одну смену закрывает объем, на который бригаде штукатуров из 5 человек понадобится 3 – 4 дня.
+					p.--md Фасадная и внутренняя механизированная штукатурка дает возможность выравнивать стены по классам Q1 – Q3 без дополнительной шпаклевки. Экономический эффект метода проявляется даже на объектах небольшой площади. В среднем, клиент получает готовые поверхности под покраску или поклейку обоев в 3 раза быстрее и на 30 % дешевле, чем при заказе ручной штукатурки.
+					h2 Особенности машинной штукатурки
+					p Кроме нанесения раствора с помощью машины в комплекс механизированной штукатурки входит ряд ручных операций, почти идентичных тем, что составляют традиционную технологию. #[strong Однако, на всех этапах можно выделить технические и организационные особенности, определяемые:]
+					ul
+						li #[strong Используемым оборудованием] — от характеристик штукатурных станций зависит производительность бригады, ее состав, #[br]а также сфера применения (площадь объектов, внутренняя или наружная отделка).
+						li #[strong Свойствами специализированных сухих смесей] — они разработаны для механизированной штукатурки и отличаются повышенной #[br]пластичностью и (для отдельных марок) увеличенным временем схватывания в сочетании с нормальным или сокращенным #[br]сроком высыхания.
+						li #[strong Методикой бригадной работы] — в ее состав входят оператор и 1 – 4 штукатура, специализирующихся на определенном типе объектов #[br](большие и средние объемы с выполнением отделки по классу Q1, либо средние и небольшие — по классам Q2 и Q3).
+					h2 Достоинства механизированной штукатурки
+					p Стоимость отделочных работ составляет от 8% до 15% итоговых сметных сумм на капитальное строительство. В рамках реноваций и ремонтов отделка #[br]может занимать до 90% всех расходов. Поэтому снижение материалоемкости и доли дорогостоящего ручного трудам — один из самых #[br]мощных факторов #[br]экономической эффективности как для строителей, так и для владельцев недвижимости. 
+					blockquote
+						h2 заголовок сноска
+						p Плоскость стены после работы штукатурной станции выглядит намного ровнее и аккуратнее, чем после первых двух ручных операций оштукатуривания. 
+					h2 Достоинства механизированной штукатурки
+					p Стоимость отделочных работ составляет от 8% до 15% итоговых сметных сумм на капитальное строительство. В рамках реноваций и ремонтов отделка может занимать до 90% всех расходов. Поэтому снижение материалоемкости и доли дорогостоящего ручного трудам — один из самых мощных факторов экономической эффективности как для строителей, так и для владельцев недвижимости. 
 			.article__more.more
-				.more__title.h1
+				.more__title.h1 Прочитайте ещё:
 				.more__list.row
 					a.more__item(href="")
 						.more__head
 							.more__date 21.04.2021
 							.more__img
-								img(src="_/uploads/" alt="")
+								img(src="_/uploads/article-sample.png" alt="")
 						.more__body
 							.more__name Механизированная штукатурка стен
 							.more__icon
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 					a.more__item(href="")
 						.more__head
 							.more__date 21.04.2021
 							.more__img
-								img(src="_/uploads/" alt="")
+								img(src="_/uploads/article-sample.png" alt="")
 						.more__body
 							.more__name Механизированная штукатурка стен
 							.more__icon
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 					a.more__item(href="")
 						.more__head
 							.more__date 21.04.2021
 							.more__img
-								img(src="_/uploads/" alt="")
+								img(src="_/uploads/article-sample.png" alt="")
 						.more__body
 							.more__name Механизированная штукатурка стен
 							.more__icon
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+
+	- classQuestions = '--pt'
+	include ../../parts/questions
