--- a/source/dev/_/pages/index/index.pug
+++ b/source/dev/_/pages/index/index.pug
@@ -40,6 +40,8 @@ block content
 	include ../../parts/instructions
 	include ../../parts/save
 	include ../../parts/office
+
+	- classMap = '--mt'
 	include ../../parts/map
 	include ../../parts/contacts
 	include ../../parts/order
