--- a/source/dev/_/pages/policy/policy.pug
+++ b/source/dev/_/pages/policy/policy.pug
@@ -1,13 +1,13 @@
 extends ../../templates/default
 block vars
 	-
-		title = ""
+		title = "Политика"
 		breadcrumbs = [
 			['Главная', 'index.html'],
 			[title]
 		]
 block content
-	.page
+	.page.first-slide
 		.case
 			+breadcrumbs('page__breadcrumbs')
 			.page__text.t1
