--- a/source/dev/_/pages/works/works.pug
+++ b/source/dev/_/pages/works/works.pug
@@ -1,34 +1,39 @@
 extends ../../templates/default
 block vars
 	-
-		title = ""
+		title = "Наши работы"
 		breadcrumbs = [
 			['Главная', 'index.html'],
 			[title]
 		]
 block content
-	.works
+	.works.first-slide
 		.case
 			+breadcrumbs('works__breadcrumbs')
-			.works__title.h1
+			.works__title.h1 Работы по механизированной штукатурке
 			.works__list.row
 				mixin work()
 					a.works__item(href="work.html")
 						.works__img
-							img(src="_/uploads/" alt="")
-						.works__name
-						.works__data.row
-							.works__data-item.d
-								.d__icon
-								.d__text
-									.d__title Площадь по полу:
-									.d__value 1000 м#[sup 2]
-							.works__data-item.d
-								.d__icon
-								.d__text
-									.d__title Площадь по стенам:
-									.d__value 4000 м#[sup 2]
+							img(src="_/uploads/work-1.png" alt="")
+						.works__name Механизированная штукатурка стен, откосов в загородном доме 800 м2
+						.works__foot.row
+							.works__data.data
+								.data__list.row
+									.data__item
+										.data__icon
+											img(src="_/uploads/tape-green.svg" alt="")
+										.data__text
+											.data__title Площадь по полу:
+											.data__value 1000 м#[sup 2]
+									.data__item
+										.data__icon
+											img(src="_/uploads/tape-green.svg" alt="")
+										.data__text
+											.data__title Площадь по стенам:
+											.data__value 4000 м#[sup 2]
 							.works__icon
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 
 				+work()
 				+work()
@@ -39,10 +44,11 @@ block content
 				+work()
 				+work()
 
-			.works__pagiantion.pagination.row
+			.works__pagiantion.pagination.--block.row
 				a.pagination__prev(href="")
+					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 				.pagination__list
-					a.pagination__item(href="") 01
+					a.pagination__item.--current(href="") 01
 					a.pagination__item(href="") 02
 					a.pagination__item(href="") 03
 					a.pagination__item(href="") 04
@@ -53,3 +59,7 @@ block content
 					a.pagination__item(href="") ...
 					a.pagination__item(href="") 19
 				a.pagination__next(href="")
+					<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+
+	- classReady = '--bg'
+	include ../../parts/ready
