--- a/source/dev/_/blocks/header/header.pug
+++ b/source/dev/_/blocks/header/header.pug
@@ -8,16 +8,16 @@ header.header
 					img(src="_/uploads/logo.png" alt="")
 				.panel__nav
 					ul
-						li
+						li.--current
 							a(href="index.html") ГЛАВНАЯ
 						li
-							a(href="portfolio.html") НАШИ РАБОТЫ
+							a(href="works.html") НАШИ РАБОТЫ
 						li
 							a(href="reviews.html") ОТЗЫВЫ
 						li
-							a(href="about-us.html") О КОМПАНИИ
+							a(href="about.html") О КОМПАНИИ
 						li
-							a(href="article.html") СТАТЬИ
+							a(href="articles.html") СТАТЬИ
 						li
 							a(href="partnership.html") СТРОИТЕЛЬНЫМ КОМПАНИЯМ
 						li
