--- a/source/dev/_/pages/articles/articles.pug
+++ b/source/dev/_/pages/articles/articles.pug
@@ -1,67 +1,86 @@
 extends ../../templates/default
 block vars
 	-
-		title = ""
+		wrapClass = '--no-overflow'
+		title = "Наши работы"
 		breadcrumbs = [
 			['Главная', 'index.html'],
 			[title]
 		]
 block content
-	.artilces
+	.articles.first-slide
 		.case
-			+breadcrumbs('artilces__breadcrumbs')
-			.artilces__title.h1 Работы по механизированной штукатурке
-			.artilces__wrap
-				.artilces__section
-					.artilces__list
-						a.artilces__item(href="")
-							.artilces__date 21.04.2021
-							.artilces__link #[span Как правильно делать механизированную штукатурку?]
-							.artilces__img
-								img(src="_/uploads/" alt="")
-						a.artilces__item(href="")
-							.artilces__date 21.04.2021
-							.artilces__link #[span Как правильно делать механизированную штукатурку?]
-							.artilces__img
-								img(src="_/uploads/" alt="")
-						a.artilces__item(href="")
-							.artilces__date 21.04.2021
-							.artilces__link #[span Как правильно делать механизированную штукатурку?]
-							.artilces__img
-								img(src="_/uploads/" alt="")
-						a.artilces__item(href="")
-							.artilces__date 21.04.2021
-							.artilces__link #[span Как правильно делать механизированную штукатурку?]
-							.artilces__img
-								img(src="_/uploads/" alt="")
-						a.artilces__item(href="")
-							.artilces__date 21.04.2021
-							.artilces__link #[span Как правильно делать механизированную штукатурку?]
-							.artilces__img
-								img(src="_/uploads/" alt="")
-					.artilces__pagination.pagination.row
+			+breadcrumbs('articles__breadcrumbs')
+			.articles__title.h1 Работы по механизированной штукатурке
+			.articles__wrap.row
+				.articles__section
+					.articles__list
+						a.articles__item(href="article.html")
+							.articles__date 21.04.2021
+							.articles__link 
+								span Как правильно делать механизированную штукатурку?
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+							.articles__img
+								img(src="_/uploads/article-1.png" alt="")
+						a.articles__item(href="article.html")
+							.articles__date 21.04.2021
+							.articles__link 
+								span Как правильно делать механизированную штукатурку?
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+							.articles__img
+								img(src="_/uploads/article-2.png" alt="")
+						a.articles__item(href="article.html")
+							.articles__date 21.04.2021
+							.articles__link 
+								span Как правильно делать механизированную штукатурку?
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+							.articles__img
+								img(src="_/uploads/article-3.png" alt="")
+						a.articles__item(href="article.html")
+							.articles__date 21.04.2021
+							.articles__link 
+								span Как правильно делать механизированную штукатурку?
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+							.articles__img
+								img(src="_/uploads/article-4.png" alt="")
+						a.articles__item(href="article.html")
+							.articles__date 21.04.2021
+							.articles__link 
+								span Как правильно делать механизированную штукатурку?
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+							.articles__img
+								img(src="_/uploads/article-1.png" alt="")
+					.articles__pagination.pagination.row
 						a.pagination__prev(href="")
+							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 						.pagination__list
-							a.pagination__item(href="") 1
-							a.pagination__item(href="") 2
-							a.pagination__item(href="") 3
-							a.pagination__item(href="") 4
-							a.pagination__item(href="") 5
-							a.pagination__item(href="") 6
-							a.pagination__item(href="") 7
-							a.pagination__item(href="") 8
+							a.pagination__item.--current(href="") 01
+							a.pagination__item(href="") 02
+							a.pagination__item(href="") 03
+							a.pagination__item(href="") 04
+							a.pagination__item(href="") 05
+							a.pagination__item(href="") 06
+							a.pagination__item(href="") 07
+							a.pagination__item(href="") 08
 						a.pagination__next(href="")
-				.artilces__aside
-					.artilces__form.a-form
+							<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
+				.articles__aside
+					.articles__form.a-form
 						.a-form__head
-							.a-form__title Проконсультируйтесь #[br]у ведущего специалиста #[br]компании ПетроСтрой
-							.a-form__subtitle Он ответит на любой ваш #[br]вопрос в ближайшее время
+							.a-form__text
+								.a-form__title Проконсультируйтесь #[br]у ведущего специалиста #[br]компании ПетроСтрой
+								.a-form__subtitle Он ответит на любой ваш #[br]вопрос в ближайшее время
 							.a-form__img
-								img(src="_/uploads/" alt="")
+								img(src="_/uploads/voronin-1.png" alt="")
 						.a-form__wrap
 							.a-form__input.input.--md.--bg-gray.--icon.--phone.--required
 								.input__wrap
-									input.input__area(type="number" name="phone" placeholder="+7 ( ___ ) ___ - __ - __")
-								.input__icon
+									input.input__area(type="tel" name="phone" placeholder="+7 ( ___ ) ___ - __ - __")
+									.input__icon
+										<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 480.56 480.56" style="enable-background:new 0 0 480.56 480.56;" xml:space="preserve"><path d="M365.354,317.9c-15.7-15.5-35.3-15.5-50.9,0c-11.9,11.8-23.8,23.6-35.5,35.6c-3.2,3.3-5.9,4-9.8,1.8	c-7.7-4.2-15.9-7.6-23.3-12.2c-34.5-21.7-63.4-49.6-89-81c-12.7-15.6-24-32.3-31.9-51.1c-1.6-3.8-1.3-6.3,1.8-9.4	c11.9-11.5,23.5-23.3,35.2-35.1c16.3-16.4,16.3-35.6-0.1-52.1c-9.3-9.4-18.6-18.6-27.9-28c-9.6-9.6-19.1-19.3-28.8-28.8	c-15.7-15.3-35.3-15.3-50.9,0.1c-12,11.8-23.5,23.9-35.7,35.5c-11.3,10.7-17,23.8-18.2,39.1c-1.9,24.9,4.2,48.4,12.8,71.3	c17.6,47.4,44.4,89.5,76.9,128.1c43.9,52.2,96.3,93.5,157.6,123.3c27.6,13.4,56.2,23.7,87.3,25.4c21.4,1.2,40-4.2,54.9-20.9	c10.2-11.4,21.7-21.8,32.5-32.7c16-16.2,16.1-35.8,0.2-51.8C403.554,355.9,384.454,336.9,365.354,317.9z"/><path d="M346.254,238.2l36.9-6.3c-5.8-33.9-21.8-64.6-46.1-89c-25.7-25.7-58.2-41.9-94-46.9l-5.2,37.1	c27.7,3.9,52.9,16.4,72.8,36.3C329.454,188.2,341.754,212,346.254,238.2z"/><path d="M403.954,77.8c-42.6-42.6-96.5-69.5-156-77.8l-5.2,37.1c51.4,7.2,98,30.5,134.8,67.2c34.9,34.9,57.8,79,66.1,127.5	l36.9-6.3C470.854,169.3,444.354,118.3,403.954,77.8z"/></svg>
 							button.a-form__btn.btn.--md.--bg-blue ПОЛУЧИТЬ КОНСУЛЬТАЦИЮ
 							.a-form__policy Нажимая на кнопку, вы даете согласие #[br]на обработку своих персональных #[br]данных и соглашаетесь с политикой #[br]конфиденциальности
+
+
+	- classQuestions = '--pt'
+	include ../../parts/questions
