--- a/source/dev/_/pages/job/job.pug
+++ b/source/dev/_/pages/job/job.pug
@@ -1,13 +1,13 @@
 extends ../../templates/default
 block vars
 	-
-		title = ""
+		title = "Вакансии"
 		breadcrumbs = [
 			['Главная', 'index.html'],
 			[title]
 		]
 block content
-	.jobs
+	.jobs.first-slide
 		.case
 			+breadcrumbs('jobs__breadcrumbs')
 			.jobs__title.h1 Работа в компании ПетроСтрой
@@ -15,44 +15,47 @@ block content
 			.jobs__list
 				.jobs__item.job
 					.job__text
-						.job__name Водитель
-						.job__text Для тех, кто только начинает работать в веб-отрасли. Научим всему
+						.job__name.h2 Водитель
+						.job__desc Для тех, кто только начинает работать в веб-отрасли. Научим всему
 					.job__count 01
 				.jobs__item.job
 					.job__text
-						.job__name Сантехник
-						.job__text Для тех, кто только начинает работать в веб-отрасли. Научим всему
+						.job__name.h2 Сантехник
+						.job__desc Для тех, кто только начинает работать в веб-отрасли. Научим всему
 					.job__count 02
 				.jobs__item.job
 					.job__text
-						.job__name бригадир
-						.job__text Для тех, кто только начинает работать в веб-отрасли. Научим всему
+						.job__name.h2 бригадир
+						.job__desc Для тех, кто только начинает работать в веб-отрасли. Научим всему
 					.job__count 03
 			.jobs__form.j-form
 				.j-form__title Ты в Москве и хочешь работать с нами?
-				.j-form__wrap
+				.j-form__wrap.row
 					.j-form__item.input.--md.--bg-gray.--icon.--name.--required
 						.input__wrap
 							input.input__area(type="text" name="name" placeholder="Введите Ваше имя")
-						.input__icon
+							.input__icon
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 350 350" style="enable-background:new 0 0 350 350;" xml:space="preserve"><path d="M175,171.173c38.914,0,70.463-38.318,70.463-85.586C245.463,38.318,235.105,0,175,0s-70.465,38.318-70.465,85.587C104.535,132.855,136.084,171.173,175,171.173z"/><path d="M41.909,301.853C41.897,298.971,41.885,301.041,41.909,301.853L41.909,301.853z"/><path d="M308.085,304.104C308.123,303.315,308.098,298.63,308.085,304.104L308.085,304.104z"/><path d="M307.935,298.397c-1.305-82.342-12.059-105.805-94.352-120.657c0,0-11.584,14.761-38.584,14.761s-38.586-14.761-38.586-14.761c-81.395,14.69-92.803,37.805-94.303,117.982c-0.123,6.547-0.18,6.891-0.202,6.131c0.005,1.424,0.011,4.058,0.011,8.651c0,0,19.592,39.496,133.08,39.496c113.486,0,133.08-39.496,133.08-39.496c0-2.951,0.002-5.003,0.005-6.399C308.062,304.575,308.018,303.664,307.935,298.397z"/></svg>
 					.j-form__item.input.--md.--bg-gray.--icon.--phone.--required
 						.input__wrap
-							input.input__area(type="number" name="phone" placeholder="+7 ( ___ ) ___ - __ - __")
-						.input__icon
+							input.input__area(type="tel" name="phone" placeholder="+7 ( ___ ) ___ - __ - __")
+							.input__icon
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 480.56 480.56" style="enable-background:new 0 0 480.56 480.56;" xml:space="preserve"><path d="M365.354,317.9c-15.7-15.5-35.3-15.5-50.9,0c-11.9,11.8-23.8,23.6-35.5,35.6c-3.2,3.3-5.9,4-9.8,1.8	c-7.7-4.2-15.9-7.6-23.3-12.2c-34.5-21.7-63.4-49.6-89-81c-12.7-15.6-24-32.3-31.9-51.1c-1.6-3.8-1.3-6.3,1.8-9.4	c11.9-11.5,23.5-23.3,35.2-35.1c16.3-16.4,16.3-35.6-0.1-52.1c-9.3-9.4-18.6-18.6-27.9-28c-9.6-9.6-19.1-19.3-28.8-28.8	c-15.7-15.3-35.3-15.3-50.9,0.1c-12,11.8-23.5,23.9-35.7,35.5c-11.3,10.7-17,23.8-18.2,39.1c-1.9,24.9,4.2,48.4,12.8,71.3	c17.6,47.4,44.4,89.5,76.9,128.1c43.9,52.2,96.3,93.5,157.6,123.3c27.6,13.4,56.2,23.7,87.3,25.4c21.4,1.2,40-4.2,54.9-20.9	c10.2-11.4,21.7-21.8,32.5-32.7c16-16.2,16.1-35.8,0.2-51.8C403.554,355.9,384.454,336.9,365.354,317.9z"/><path d="M346.254,238.2l36.9-6.3c-5.8-33.9-21.8-64.6-46.1-89c-25.7-25.7-58.2-41.9-94-46.9l-5.2,37.1	c27.7,3.9,52.9,16.4,72.8,36.3C329.454,188.2,341.754,212,346.254,238.2z"/><path d="M403.954,77.8c-42.6-42.6-96.5-69.5-156-77.8l-5.2,37.1c51.4,7.2,98,30.5,134.8,67.2c34.9,34.9,57.8,79,66.1,127.5	l36.9-6.3C470.854,169.3,444.354,118.3,403.954,77.8z"/></svg>
 					.j-form__item.input.--md.--bg-gray.--icon.--email.--required
 						.input__wrap
 							input.input__area(type="email" name="email" placeholder="e-mail@mail.ru")
-						.input__icon
-					.j-form__item.input.--md.--bg-gray.--icon.--message.--required
+							.input__icon
+								<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 512 512" style="enable-background:new 0 0 512 512;" xml:space="preserve"><path d="M256,132.129c-68.302,0-123.871,55.569-123.871,123.871S187.698,379.871,256,379.871c43.574,0,81.937-22.635,104.024-56.744c16.151,14.722,37.614,23.712,61.138,23.712C471.25,346.839,512,306.088,512,256C512,114.842,397.16,0,256,0S0,114.842,0,256s114.84,256,256,256c68.38,0,132.667-26.629,181.02-74.98l-35.036-35.036C362.99,440.977,311.146,462.452,256,462.452c-113.837,0-206.452-92.614-206.452-206.452S142.163,49.548,256,49.548S462.452,142.163,462.452,256c0,22.767-18.523,41.29-41.29,41.29c-22.767,0-41.29-18.523-41.29-41.289V256C379.871,187.698,324.302,132.129,256,132.129z M256,330.323c-40.983,0-74.323-33.341-74.323-74.323c0-40.982,33.339-74.323,74.323-74.323s74.323,33.341,74.323,74.323C330.323,296.981,296.983,330.323,256,330.323z"/></svg>
+					.j-form__item.input.--md.--bg-gray.--message.--required
 						.input__wrap
 							input.input__area(type="text" name="message" placeholder="Сообщение...")
-						.input__icon
-					.j-form__item.file.--md.--bg-white
-						input.file__input(type="file" name="resume")
-						.file__wrap
+					.j-form__item.file.--md.--b-gray
+						input.file__input#j-form-file(type="file" name="resume")
+						label.file__wrap(for="j-form-file")
 							.file__title Прикрепить резюме
 							.file__icon
+								<svg viewBox="-96 0 512 512" xmlns="http://www.w3.org/2000/svg"><path d="m160 512c-88.234375 0-160-71.765625-160-160v-229.332031c0-8.832031 7.167969-16 16-16s16 7.167969 16 16v229.332031c0 70.59375 57.40625 128 128 128s128-57.40625 128-128v-234.667969c0-47.058593-38.273438-85.332031-85.332031-85.332031-47.0625 0-85.335938 38.273438-85.335938 85.332031v213.335938c0 23.53125 19.136719 42.664062 42.667969 42.664062s42.667969-19.132812 42.667969-42.664062v-208c0-8.832031 7.167969-16 16-16s16 7.167969 16 16v208c0 41.171875-33.496094 74.664062-74.667969 74.664062s-74.667969-33.492187-74.667969-74.664062v-213.335938c0-64.679687 52.628907-117.332031 117.335938-117.332031 64.703125 0 117.332031 52.652344 117.332031 117.332031v234.667969c0 88.234375-71.765625 160-160 160zm0 0"/></svg>
 							.file__message
-					button.j-form__btn.btn.--md.--bg-blue ОТПРАВИТЬ ЗАЯВКУ
+					button.j-form__item.j-form__btn.btn.--md.--bg-blue ОТПРАВИТЬ ЗАЯВКУ
 
 				.j-form__policy Нажимая на кнопку, вы даете согласие на обработку своих персональных #[br]данных и соглашаетесь с политикой конфиденциальности.
