--- a/source/dev/_/pages/partnership/partnership.pug
+++ b/source/dev/_/pages/partnership/partnership.pug
@@ -1,10 +1,11 @@
 extends ../../templates/default
 block vars
 	-
-		title = ""
+		title = "Соотрудничество"
 		breadcrumbs = [
 			['Главная', 'index.html'],
 			[title]
 		]
 block content
-	
+	- cooperatePage = true
+	include ../../parts/cooperate
