--- a/source/dev/_/pages/reviews/reviews.pug
+++ b/source/dev/_/pages/reviews/reviews.pug
@@ -1,10 +1,14 @@
 extends ../../templates/default
 block vars
 	-
-		title = ""
+		title = "Отзывы"
 		breadcrumbs = [
 			['Главная', 'index.html'],
 			[title]
 		]
 block content
-	
+	- classReviews = '--page'
+	include ../../parts/reviews
+
+	- classQuestions = '--pt'
+	include ../../parts/questions
