--- a/source/dev/_/parts/map.pug
+++ b/source/dev/_/parts/map.pug
@@ -1,3 +1,3 @@
-.map.--mt
+.map(class=classMap)
 	.map__area#map(data-lng="59.975297" data-lat="30.321869")
 	script(src="https://api-maps.yandex.ru/2.1/?lang=ru_RU")
