--- a/source/dev/_/parts/reviews.pug
+++ b/source/dev/_/parts/reviews.pug
@@ -1,5 +1,9 @@
-.reviews
+include ../sys/pug/vars
+
+.reviews(class=classReviews)
 	.case
+		if (classReviews)
+			+breadcrumbs('reviews__breadcrumbs')
 		.reviews__title.h1 Отзывы о компании ПетроСтрой
 		.reviews__subtitle.h2 #[strong Больше 100 отзывов] по механизированной штукатурке #[br]и отделке квартир можно найти в сети о компании ПетроСтрой
 		.reviews__desc.h3 Мы собрали последние отзывы о нашей работе и ссылки на них.
@@ -122,5 +126,6 @@
 					.reviews__arrow.btn.arrow.--bg-white.--round.--next.--mt
 						<svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 451.846 451.847" style="enable-background:new 0 0 451.846 451.847;" xml:space="preserve"><path d="M345.441,248.292L151.154,442.573c-12.359,12.365-32.397,12.365-44.75,0c-12.354-12.354-12.354-32.391,0-44.744 L278.318,225.92L106.409,54.017c-12.354-12.359-12.354-32.394,0-44.748c12.354-12.359,32.391-12.359,44.75,0l194.287,194.284 c6.177,6.18,9.262,14.271,9.262,22.366C354.708,234.018,351.617,242.115,345.441,248.292z"/></svg>
 
-		.reviews__more.btn-wrap
-			a.reviews__more-btn.btn.--md.--b-gray(href="javascript:;") СМОТРЕТЬ ПОДРОБНЕЕ
+		if (!classReviews)
+			.reviews__more.btn-wrap
+				a.reviews__more-btn.btn.--md.--b-gray(href="reviews.html") СМОТРЕТЬ ПОДРОБНЕЕ
