--- a/source/dev/_/sys/css/style.css
+++ b/source/dev/_/sys/css/style.css
@@ -96,6 +96,9 @@ path, circle, rect, line {
   min-height: 100%;
   overflow: hidden;
 }
+.wrap.--no-overflow {
+  overflow: visible;
+}
 
 .case {
   position: relative;
@@ -289,6 +292,19 @@ path, circle, rect, line {
 }
 .input.--bg-gray .input__icon svg path {
   opacity: 0.2;
+}
+.input.--focus .input__icon svg path, .input.--filed .input__icon svg path {
+  opacity: 0.5;
+}
+.input.--error .input__area {
+  color: #ff1717;
+}
+.input.--error .input__area::placeholder {
+  color: #ff1717;
+}
+.input.--error .input.--icon svg path {
+  opacity: 1;
+  fill: #ff1717;
 }
 
 .textarea__wrap {
@@ -585,6 +601,50 @@ path, circle, rect, line {
   scroll-snap-type: y mandatory;
 }
 
+.file__input {
+  display: none;
+}
+.file__wrap {
+  position: relative;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+}
+.file__message {
+  position: absolute;
+  bottom: -9px;
+  background-color: #fff;
+}
+.file.--b-gray .file__wrap {
+  border-radius: 5px;
+  border: 1px solid #e4e5e5;
+}
+.file.--b-gray .file__icon path {
+  fill: #2a88d1;
+}
+.file.--md .file__wrap {
+  height: 68px;
+  padding: 0 28px;
+}
+.file.--md .file__title {
+  font-size: 14px;
+  opacity: 0.8;
+}
+.file.--md .file__icon {
+  width: 14px;
+  margin-left: auto;
+  font-size: 0;
+}
+.file.--md .file__message {
+  padding-left: 3px;
+  padding-right: 3px;
+  left: 25px;
+  font-size: 12px;
+  max-width: calc(100% - 50px);
+  white-space: nowrap;
+  color: #2a88d1;
+}
+
 .radios {
   display: flex;
   align-items: center;
@@ -857,6 +917,9 @@ sup {
 .panel__nav ul {
   justify-content: space-between;
 }
+.panel__nav li.--current a {
+  color: #2a88d1;
+}
 .panel__nav a {
   font-size: 11px;
   letter-spacing: 0.88px;
@@ -914,6 +977,12 @@ sup {
 .contact__value {
   font-size: 11px;
   text-transform: uppercase;
+}
+.contact__value p {
+  margin-bottom: 10px;
+}
+.contact__value p:last-of-type {
+  margin-bottom: 0;
 }
 
 .links ul {
@@ -1193,7 +1262,7 @@ sup {
   letter-spacing: 0.78px;
   font-family: "Montserrat", sans-serif;
   text-transform: uppercase;
-  margin-bottom: 12px;
+  margin-bottom: 8px;
 }
 .person__position {
   font-size: 13px;
@@ -2070,6 +2139,10 @@ sup {
   background-color: transparent;
 }
 
+.ready.--bg {
+  padding-bottom: 120px;
+  background-color: #f4f4f4;
+}
 .ready__content {
   width: 100%;
   max-width: 670px;
@@ -2635,6 +2708,9 @@ sup {
 .data__item.--full {
   width: 100%;
 }
+.data__item.--full .data__value {
+  line-height: 24px;
+}
 .data__icon {
   width: 22px;
   padding-top: 1px;
@@ -2954,6 +3030,16 @@ sup {
 .reviews:after {
   z-index: -2;
   background-color: #f4f4f4;
+}
+.reviews.--page {
+  padding-top: 195px;
+  background-color: #f4f4f4;
+}
+.reviews.--page:before, .reviews.--page:after {
+  display: none;
+}
+.reviews__breadcrumbs {
+  margin-bottom: 20px;
 }
 .reviews__title {
   text-align: center;
@@ -3919,6 +4005,13 @@ sup {
   background-color: #f4f4f4;
   overflow: hidden;
 }
+.cooperate.--page {
+  margin-top: 0;
+  padding-top: 195px;
+}
+.cooperate__breadcrumbs {
+  margin-bottom: 20px;
+}
 .cooperate__title {
   text-align: center;
   margin-left: auto;
@@ -4238,6 +4331,29 @@ sup {
 .contacts__contact:last-of-type {
   margin-bottom: 0;
 }
+.contacts__req {
+  width: 100%;
+  max-width: 125px;
+}
+.contacts__parking {
+  margin-left: auto;
+  margin-right: 20px;
+}
+
+.parking {
+  width: 240px;
+}
+.parking__img {
+  margin-left: -12px;
+  margin-bottom: 10px;
+}
+.parking__text {
+  opacity: 0.7;
+  font-size: 11px;
+  line-height: 20px;
+  letter-spacing: 0.44px;
+  text-transform: uppercase;
+}
 
 .b-consult {
   display: flex;
@@ -4501,6 +4617,9 @@ sup {
   padding-top: 0;
   overflow: hidden;
 }
+.questions.--pt {
+  padding-top: 52px;
+}
 .questions__img-wrap {
   width: 675px;
   max-height: 880px;
@@ -4544,6 +4663,828 @@ sup {
 }
 .questions__bg {
   object-position: center bottom;
+}
+
+.thanks {
+  overflow: hidden;
+  padding-bottom: 140px;
+}
+.thanks__wrap {
+  position: relative;
+}
+.thanks__content {
+  max-width: 560px;
+}
+.thanks__breadcrumbs {
+  margin-bottom: 24px;
+}
+.thanks__title {
+  margin-bottom: 15px;
+}
+.thanks__call {
+  margin-top: 35px;
+  padding-top: 40px;
+  padding-bottom: 45px;
+  position: relative;
+  border-top: 1px solid rgba(72, 78, 81, 0.1);
+  border-bottom: 1px solid rgba(72, 78, 81, 0.1);
+}
+.thanks__call .call__title {
+  display: inline;
+  margin-bottom: 0;
+  line-height: 25px;
+}
+.thanks__call .call__phone {
+  display: inline-flex;
+  margin-bottom: 0;
+  position: relative;
+  top: 2px;
+  margin-left: 7px;
+}
+.thanks__call .call__icon {
+  top: -60px;
+}
+.thanks__img {
+  position: absolute;
+  bottom: -450px;
+  right: 145px;
+  transform: scale(-1, 1);
+}
+.thanks__person {
+  position: absolute;
+  top: 32px;
+  right: 0;
+}
+.thanks__person:after {
+  content: "";
+  position: absolute;
+  top: 100%;
+  margin-top: 10px;
+  left: -115px;
+  width: 157px;
+  height: 119px;
+  background: url("../imgs/line-8.svg") no-repeat center;
+}
+
+.articles {
+  padding-bottom: 120px;
+  background-color: #f4f4f4;
+}
+.articles__breadcrumbs {
+  margin-bottom: 20px;
+}
+.articles__title {
+  margin-bottom: 24px;
+}
+.articles__wrap {
+  align-items: flex-start;
+}
+.articles__section {
+  width: 790px;
+}
+.articles__aside {
+  width: calc(100% - 790px);
+  padding-left: 50px;
+  position: sticky;
+  top: 0;
+  right: 0;
+}
+.articles__item {
+  z-index: 1;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  height: 475px;
+  padding: 40px;
+  border-radius: 8px;
+  overflow: hidden;
+  margin-bottom: 50px;
+}
+.articles__item:last-of-type {
+  margin-bottom: 0;
+}
+.articles__item:hover .articles__img img {
+  transform: scale(1.1);
+}
+.articles__date {
+  display: inline-flex;
+  align-items: center;
+  height: 36px;
+  border-radius: 8px;
+  padding: 0 14px;
+  color: rgba(72, 78, 81, 0.8);
+  background-color: #ffffff;
+  margin-right: auto;
+}
+.articles__link {
+  display: flex;
+  align-items: center;
+  margin-top: auto;
+}
+.articles__link span {
+  width: calc(100% - 14px);
+  color: #fff;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.32px;
+}
+.articles__link svg {
+  min-width: 14px;
+  width: 14px;
+  margin-left: 10px;
+}
+.articles__link svg path {
+  fill: #fff;
+}
+.articles__img {
+  z-index: -1;
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+}
+.articles__img:before {
+  z-index: 2;
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 282px;
+  transition: 0.3s;
+  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 0%, rgba(255, 255, 255, 0) 100%);
+}
+.articles__img img {
+  z-index: 1;
+  width: 100%;
+  height: 100%;
+  transition: 0.6s;
+  object-fit: cover;
+}
+
+.a-form {
+  position: relative;
+  border-radius: 8px;
+  padding: 45px 30px 45px;
+  background-color: #fff;
+}
+.a-form__head {
+  position: relative;
+}
+.a-form__text {
+  max-width: 185px;
+}
+.a-form__title {
+  font-weight: 700;
+  line-height: 23px;
+  margin-bottom: 6px;
+}
+.a-form__subtitle {
+  font-size: 14px;
+  line-height: 22px;
+  margin-bottom: 25px;
+}
+.a-form__img {
+  width: 89px;
+  position: absolute;
+  top: -5px;
+  right: -10px;
+}
+.a-form__input {
+  margin-bottom: 20px;
+}
+.a-form__btn {
+  width: 100%;
+}
+.a-form__btn.btn {
+  padding-left: 10px;
+  padding-right: 10px;
+}
+.a-form__policy {
+  opacity: 0.5;
+  font-size: 12px;
+  line-height: 19px;
+  text-align: center;
+  margin-top: 18px;
+}
+
+.pagination {
+  align-items: center;
+  overflow: hidden;
+  border-radius: 8px;
+  background-color: #fff;
+  margin-top: 50px;
+}
+.pagination__prev {
+  border-right: 1px solid #eee;
+}
+.pagination__prev svg {
+  transform: rotate(180deg);
+}
+.pagination__prev, .pagination__next {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 78px;
+  height: 78px;
+}
+.pagination__prev svg, .pagination__next svg {
+  width: 14px;
+  opacity: 0.3;
+  transition: 0.3s;
+}
+.pagination__prev:hover svg, .pagination__next:hover svg {
+  opacity: 1;
+}
+.pagination__prev:hover svg path, .pagination__next:hover svg path {
+  fill: #2a88d1;
+}
+.pagination__list {
+  display: flex;
+  align-items: center;
+  width: calc(100% - 156px);
+  margin-left: auto;
+  margin-right: auto;
+}
+.pagination__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 79px;
+  height: 78px;
+  font-size: 16px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 300;
+  border-right: 1px solid #eee;
+  overflow: hidden;
+}
+.pagination__item:before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 2px;
+  transition: 0.3s;
+  background-color: transparent;
+}
+.pagination__item.--current {
+  font-weight: 700;
+}
+.pagination__item.--current:before {
+  background-color: #2a88d1;
+}
+.pagination__item:hover:before {
+  background-color: #2a88d1;
+}
+.pagination.--block {
+  background-color: transparent;
+}
+.pagination.--block .pagination__prev, .pagination.--block .pagination__next, .pagination.--block .pagination__item {
+  border: none;
+  width: 70px;
+  height: 70px;
+  border-radius: 8px;
+  background-color: #fff;
+}
+.pagination.--block .pagination__list {
+  width: calc(100% - 200px);
+  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.article {
+  background-color: #f4f4f4;
+  padding-bottom: 120px;
+}
+.article__content {
+  padding-top: 40px;
+}
+.article__img {
+  height: 600px;
+  overflow: hidden;
+  border-radius: 8px;
+  margin-bottom: 40px;
+}
+.article__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.t1 a {
+  color: #2a88d1;
+  font-weight: 700;
+}
+.t1 a:hover {
+  border-color: #2a88d1;
+}
+.t1 p {
+  font-size: 15px;
+  line-height: 23px;
+  margin-bottom: 20px;
+}
+.t1 p.--md {
+  font-size: 18px;
+  line-height: 30px;
+  margin-bottom: 20px;
+}
+.t1 ul {
+  flex-direction: column;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+.t1 ul li {
+  position: relative;
+  padding-left: 47px;
+  margin-bottom: 8px;
+}
+.t1 ul li:before {
+  content: "";
+  position: absolute;
+  top: 7px;
+  left: 30px;
+  width: 6px;
+  height: 6px;
+  border-radius: 50%;
+  background-color: #2a88d1;
+}
+.t1 blockquote {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  padding-left: 30px;
+  border-left: 1px solid #2a88d1;
+  margin-left: 30px;
+}
+.t1 blockquote h2 {
+  margin-top: 0;
+  margin-bottom: 5px;
+}
+.t1 h1, .t1 h2, .t1 h3, .t1 h4, .t1 h5, .t1 h6, .t1 p {
+  display: block;
+}
+.t1 h1:last-child, .t1 h2:last-child, .t1 h3:last-child, .t1 h4:last-child, .t1 h5:last-child, .t1 h6:last-child, .t1 p:last-child {
+  margin-bottom: 0;
+}
+.t1 h1 {
+  font-size: 47px;
+  line-height: 66px;
+  font-weight: 500;
+  letter-spacing: 0.94px;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  margin-left: -3px;
+  margin-bottom: 20px;
+}
+.t1 h1 strong {
+  font-weight: 700;
+}
+.t1 h2 {
+  font-size: 20px;
+  line-height: 35px;
+  letter-spacing: 0.4px;
+  text-transform: uppercase;
+  font-family: "Montserrat", sans-serif;
+  margin-top: 35px;
+  margin-bottom: 15px;
+}
+.t1 h3 {
+  font-size: 18px;
+  line-height: 27px;
+  font-family: "Manrope", sans-serif;
+}
+.t1 h4 {
+  font-size: 15px;
+  line-height: 27px;
+  font-family: "Manrope", sans-serif;
+}
+.t1 h5 {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+}
+.t1 h6 {
+  font-size: 14px;
+  line-height: 23px;
+  font-weight: 400;
+  font-family: "Manrope", sans-serif;
+}
+
+.more {
+  border-top: 1px solid rgba(0, 0, 0, 0.1);
+  margin-top: 65px;
+  padding-top: 40px;
+}
+.more__title {
+  margin-bottom: 40px;
+}
+.more__list {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+.more__item {
+  width: calc(100% / 3 - 30px);
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 30px;
+  border-radius: 8px;
+  background-color: #ffffff;
+}
+.more__item:hover .more__icon {
+  background-color: #2a88d1;
+}
+.more__item:hover .more__icon svg {
+  opacity: 1;
+}
+.more__item:hover .more__icon svg path {
+  fill: #fff;
+}
+.more__head {
+  position: relative;
+  margin-bottom: 25px;
+}
+.more__date {
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  border-radius: 8px;
+  color: rgba(72, 78, 81, 0.8);
+  position: absolute;
+  top: 15px;
+  left: 15px;
+  height: 36px;
+  padding-left: 14px;
+  padding-right: 14px;
+  background-color: #fff;
+}
+.more__img {
+  height: 200px;
+  border-radius: 8px;
+  overflow: hidden;
+}
+.more__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.more__body {
+  display: flex;
+  align-items: center;
+}
+.more__name {
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 600;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.32px;
+}
+.more__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 60px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  margin-left: 15px;
+  transition: 0.3s;
+  border: 1px solid rgba(183, 186, 187, 0.4);
+}
+.more__icon svg {
+  width: 14px;
+  opacity: 0.35;
+}
+
+.jobs {
+  padding-bottom: 120px;
+  background-color: #f4f4f4;
+}
+.jobs__breadcrumbs {
+  margin-bottom: 20px;
+}
+.jobs__title {
+  margin-bottom: 12px;
+}
+.jobs__text {
+  font-size: 18px;
+  font-weight: 300;
+  line-height: 27px;
+  margin-bottom: 45px;
+}
+.jobs__item {
+  display: flex;
+  align-items: center;
+  min-height: 150px;
+  padding: 20px 70px 20px 65px;
+  border-top: 1px solid #e4e5e5;
+}
+.jobs__item:last-of-type {
+  border-bottom: 1px solid #e4e5e5;
+}
+
+.job__text {
+  margin-right: 15px;
+}
+.job__name {
+  color: #2a88d1;
+  margin-bottom: 5px;
+}
+.job__desc {
+  font-size: 14px;
+  line-height: 23px;
+}
+.job__count {
+  margin-left: auto;
+  font-size: 20px;
+  opacity: 0.5;
+  letter-spacing: 0.4px;
+  font-family: "Montserrat", sans-serif;
+  white-space: nowrap;
+}
+
+.j-form {
+  padding: 55px 60px 60px;
+  margin-top: 70px;
+  border-radius: 8px;
+  background-color: #fff;
+  box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08);
+}
+.j-form__title {
+  font-size: 16px;
+  font-weight: 700;
+  font-family: "Montserrat", sans-serif;
+  text-transform: uppercase;
+  letter-spacing: 0.32px;
+  margin-bottom: 27px;
+}
+.j-form__wrap {
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-bottom: -30px;
+}
+.j-form__item {
+  width: calc(100% / 3 - 30px);
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 30px;
+}
+.j-form__policy {
+  opacity: 0.5;
+  font-size: 12px;
+  line-height: 19px;
+  margin-top: 25px;
+}
+
+.page404 {
+  background-color: #f4f4f4;
+}
+.page404__wrap {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  text-align: center;
+  padding: 80px 20px 115px;
+}
+.page404__img {
+  margin-bottom: 35px;
+}
+.page404__title {
+  font-weight: 500;
+  margin-bottom: 10px;
+}
+.page404__subtitle {
+  margin-bottom: 35px;
+}
+.page404__desc {
+  opacity: 0.8;
+  font-size: 14px;
+  margin-top: 24px;
+}
+
+.page {
+  background-color: #f4f4f4;
+  padding-bottom: 120px;
+}
+.page__breadcrumbs {
+  margin-bottom: 20px;
+}
+.page__title {
+  margin-top: 20px;
+  margin-bottom: 140px;
+}
+
+.contacts-p {
+  padding-bottom: 140px;
+  background-color: #f4f4f4;
+}
+.contacts-p__breadcrumbs {
+  margin-bottom: 20px;
+}
+
+.works {
+  padding-bottom: 30px;
+  background-color: #f4f4f4;
+}
+.works__breadcrumbs {
+  margin-bottom: 20px;
+}
+.works__title {
+  margin-bottom: 32px;
+}
+.works__list {
+  margin-left: -15px;
+  margin-right: -15px;
+  margin-bottom: -30px;
+}
+.works__item {
+  width: calc(100% / 2 - 30px);
+  padding: 30px;
+  margin-left: 15px;
+  margin-right: 15px;
+  margin-bottom: 30px;
+  border-radius: 8px;
+  background-color: #fff;
+}
+.works__item:hover .works__icon {
+  background-color: #2a88d1;
+}
+.works__item:hover .works__icon svg {
+  opacity: 1;
+}
+.works__item:hover .works__icon svg path {
+  fill: #fff;
+}
+.works__img {
+  height: 370px;
+  overflow: hidden;
+  border-radius: 8px;
+  margin-bottom: 25px;
+}
+.works__img img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.works__name {
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 500;
+  text-transform: uppercase;
+  max-width: 480px;
+  font-family: "Montserrat", sans-serif;
+  margin-bottom: 9px;
+}
+.works__foot {
+  align-items: center;
+  margin-top: auto;
+}
+.works__data {
+  width: calc(100% - 60px);
+  padding-right: 10px;
+}
+.works__icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  min-width: 60px;
+  width: 60px;
+  height: 60px;
+  border-radius: 50%;
+  transition: 0.3s;
+  border: 1px solid rgba(183, 186, 187, 0.4);
+}
+.works__icon svg {
+  width: 14px;
+  opacity: 0.35;
+}
+
+.work {
+  padding-bottom: 30px;
+  background-color: #f4f4f4;
+}
+.work__breadcrumbs {
+  margin-bottom: 35px;
+}
+.work__title {
+  margin-top: 50px;
+  margin-bottom: 50px;
+}
+.work__content {
+  width: calc(100% - 380px);
+  padding-right: 80px;
+}
+.work__gifts {
+  width: 380px;
+}
+.work__btn {
+  display: inline-flex;
+  margin-top: 35px;
+}
+
+.w-sli__list {
+  position: relative;
+  margin-bottom: 30px;
+}
+.w-sli__list-item {
+  height: 600px;
+  overflow: hidden;
+  border-radius: 8px;
+}
+.w-sli__list-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.w-sli__arrow.--prev {
+  left: 50px;
+}
+.w-sli__arrow.--next {
+  right: 50px;
+}
+.w-sli__thumbs-item {
+  overflow: hidden;
+  border-radius: 8px;
+  opacity: 0.4;
+  transition: 0.3s;
+  cursor: pointer;
+  position: relative;
+  height: 140px;
+}
+.w-sli__thumbs-item:before {
+  content: "";
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  right: 5px;
+  bottom: 5px;
+  border: 1px solid #fff;
+  border-radius: 8px;
+  opacity: 0;
+  transition: 0.3s;
+}
+.w-sli__thumbs-item.swiper-slide-thumb-active {
+  opacity: 1;
+}
+.w-sli__thumbs-item.swiper-slide-thumb-active:before {
+  opacity: 0.4;
+}
+.w-sli__thumbs-item img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.w-gifts {
+  border-radius: 8px;
+  background-color: #fff;
+}
+.w-gifts__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 30px 0 30px 40px;
+  border-bottom: 1px solid rgba(183, 186, 187, 0.2);
+}
+.w-gifts__item:last-of-type {
+  border-bottom: none;
+}
+.w-gifts__item:nth-of-type(1) .w-gifts__img {
+  right: -48px;
+}
+.w-gifts__item:nth-of-type(2) .w-gifts__img {
+  right: -24px;
+}
+.w-gifts__item:nth-of-type(3) .w-gifts__img {
+  right: -44px;
+}
+.w-gifts__text {
+  width: 100%;
+  max-width: 275px;
+}
+.w-gifts__name {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 500;
+  font-family: "Montserrat", sans-serif;
+  letter-spacing: 0.2px;
+  text-transform: uppercase;
+  margin-bottom: 6px;
+}
+.w-gifts__desc {
+  opacity: 0.9;
+  font-size: 14px;
+  line-height: 23px;
+}
+.w-gifts__img {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
 }
 
 .footer__top {
