--- a/source/dev/_/sys/sass/style.sass
+++ b/source/dev/_/sys/sass/style.sass
@@ -17,6 +17,48 @@
 @import ../../components/slider/slider
 // @import ../../components/tog/tog
 
+.file
+	&__input
+		display: none
+	&__wrap
+		position: relative
+		display: flex
+		align-items: center
+		cursor: pointer
+	&__message
+		position: absolute
+		bottom: -9px
+		background-color: #fff
+	&.--b-gray
+		.file
+			&__wrap
+				border-radius: 5px
+				border: 1px solid #e4e5e5
+			&__icon
+				path
+					fill: $blue
+		
+	&.--md
+		.file
+			&__wrap
+				height: 68px
+				padding: 0 28px
+			&__title
+				font-size: 14px
+				opacity: 0.8
+			&__icon
+				width: 14px
+				margin-left: auto
+				font-size: 0
+			&__message
+				padding-left: 3px
+				padding-right: 3px
+				left: 25px
+				font-size: 12px
+				max-width: calc(100% - 50px)
+				white-space: nowrap
+				color: $blue
+		
 
 .radios
 	display: flex
@@ -253,12 +295,17 @@ sup
 		border-left: 1px solid rgba(0,0,0,0.05)
 		ul
 			justify-content: space-between
+		li
+			&.--current
+				a
+					color: $blue
 		a
 			font-size: 11px
 			letter-spacing: 0.88px
 			color: #575e62
 			&:hover
 				color: $blue
+
 
 .ya
 	max-width: 155px
@@ -299,6 +346,10 @@ sup
 	&__value
 		font-size: 11px
 		text-transform: uppercase
+		p
+			margin-bottom: 10px
+			&:last-of-type
+				margin-bottom: 0
 
 
 .links
@@ -549,7 +600,7 @@ sup
 		letter-spacing: 0.78px
 		font-family: $montserrat
 		text-transform: uppercase
-		margin-bottom: 12px
+		margin-bottom: 8px
 	&__position
 		font-size: 13px
 		line-height: 20px
@@ -1299,6 +1350,9 @@ sup
 		background-color: transparent
 
 .ready
+	&.--bg
+		padding-bottom: 120px
+		background-color: #f4f4f4
 	&__content
 		width: 100%
 		max-width: 670px
@@ -1793,6 +1847,9 @@ sup
 		margin-right: 20px
 		&.--full
 			width: 100%
+			.data
+				&__value
+					line-height: 24px
 	&__icon
 		width: 22px
 		padding-top: 1px
@@ -2071,6 +2128,13 @@ sup
 	&:after
 		z-index: -2
 		background-color: #f4f4f4
+	&.--page
+		padding-top: 195px
+		background-color: #f4f4f4
+		&:before, &:after
+			display: none
+	&__breadcrumbs
+		margin-bottom: 20px
 	&__title
 		text-align: center
 		margin-left: auto
@@ -2925,6 +2989,11 @@ sup
 	padding-bottom: 120px
 	background-color: #f4f4f4
 	overflow: hidden
+	&.--page
+		margin-top: 0
+		padding-top: 195px
+	&__breadcrumbs
+		margin-bottom: 20px
 	&__title
 		text-align: center
 		margin-left: auto
@@ -3198,6 +3267,25 @@ sup
 		&:last-of-type
 			margin-bottom: 0
 
+	&__req
+		width: 100%
+		max-width: 125px
+
+	&__parking
+		margin-left: auto
+		margin-right: 20px
+
+.parking
+	width: 240px
+	&__img
+		margin-left: -12px
+		margin-bottom: 10px
+	&__text
+		opacity: 0.7
+		font-size: 11px
+		line-height: 20px
+		letter-spacing: 0.44px
+		text-transform: uppercase
 
 .b-consult
 	display: flex
@@ -3425,6 +3513,8 @@ sup
 .questions
 	padding-top: 0
 	overflow: hidden
+	&.--pt
+		padding-top: 52px
 	&__img-wrap
 		width: 675px
 		max-height: 880px
@@ -3467,6 +3557,713 @@ sup
 		object-position: center bottom
 
 
+.thanks
+	overflow: hidden
+	padding-bottom: 140px
+	&__wrap
+		position: relative
+	&__content
+		max-width: 560px
+	&__breadcrumbs
+		margin-bottom: 24px
+	&__title
+		margin-bottom: 15px
+	&__call
+		margin-top: 35px
+		padding-top: 40px
+		padding-bottom: 45px
+		position: relative
+		border-top: 1px solid rgba(72,78,81,.1)
+		border-bottom: 1px solid rgba(72,78,81,.1)
+		.call
+			&__title
+				display: inline
+				margin-bottom: 0
+				line-height: 25px
+			&__phone
+				display: inline-flex
+				margin-bottom: 0
+				position: relative
+				top: 2px
+				margin-left: 7px
+			&__icon
+				top: -60px
+
+	&__img
+		position: absolute
+		bottom: -450px
+		right: 145px
+		transform: scale(-1, 1)
+	&__person
+		position: absolute
+		top: 32px
+		right: 0
+		&:after
+			content: ''
+			position: absolute
+			top: 100%
+			margin-top: 10px
+			left: -115px
+			width: 157px
+			height: 119px
+			background: url('../imgs/line-8.svg') no-repeat center
+
+.articles
+	padding-bottom: 120px
+	background-color: #f4f4f4
+	&__breadcrumbs
+		margin-bottom: 20px
+	&__title
+		margin-bottom: 24px
+	&__wrap
+		align-items: flex-start
+	&__section
+		width: 790px
+	&__aside
+		width: calc(100% - 790px)
+		padding-left: 50px
+		position: sticky
+		top: 0
+		right: 0
+		
+	&__item
+		z-index: 1
+		position: relative
+		display: flex
+		flex-direction: column
+		height: 475px
+		padding: 40px
+		border-radius: 8px
+		overflow: hidden
+		margin-bottom: 50px
+		&:last-of-type
+			margin-bottom: 0
+		&:hover
+			.articles
+				&__img
+					img
+						transform: scale(1.1)
+
+	&__date
+		display: inline-flex
+		align-items: center
+		height: 36px
+		border-radius: 8px
+		padding: 0 14px
+		color: rgba(72,78,81,.8)
+		background-color: #ffffff
+		margin-right: auto
+	&__link
+		display: flex
+		align-items: center
+		margin-top: auto
+		span
+			width: calc(100% - 14px)
+			color: #fff
+			font-weight: 700
+			text-transform: uppercase
+			letter-spacing: 0.32px
+		svg
+			min-width: 14px
+			width: 14px
+			margin-left: 10px
+			path
+				fill: #fff
+	&__img
+		z-index: -1
+		position: absolute
+		top: 0
+		left: 0
+		right: 0
+		bottom: 0
+		&:before
+			z-index: 2
+			content: ''
+			position: absolute
+			bottom: 0
+			left: 0
+			right: 0
+			height: 282px
+			transition: .3s
+			background: linear-gradient(0deg, rgba(0,0,0,.8) 0%, rgba(255,255,255,0) 100%)
+		img
+			z-index: 1
+			width: 100%
+			height: 100%
+			transition: .6s
+			object-fit: cover
+
+
+.a-form
+	position: relative
+	border-radius: 8px
+	padding: 45px 30px 45px
+	background-color: #fff
+	&__head
+		position: relative
+	&__text
+		max-width: 185px
+	&__title
+		font-weight: 700
+		line-height: 23px
+		margin-bottom: 6px
+	&__subtitle
+		font-size: 14px
+		line-height: 22px
+		margin-bottom: 25px
+	&__img
+		width: 89px
+		position: absolute
+		top: -5px
+		right: -10px
+	&__input
+		margin-bottom: 20px
+	&__btn
+		width: 100%
+		&.btn
+			padding-left: 10px
+			padding-right: 10px
+	&__policy
+		opacity: 0.5
+		font-size: 12px
+		line-height: 19px
+		text-align: center
+		margin-top: 18px
+
+
+.pagination
+	align-items: center
+	overflow: hidden
+	border-radius: 8px
+	background-color: #fff
+	margin-top: 50px
+	&__prev
+		border-right: 1px solid #eee
+		svg
+			transform: rotate(180deg)
+	&__prev, &__next
+		display: flex
+		align-items: center
+		justify-content: center
+		width: 78px
+		height: 78px
+		svg
+			width: 14px
+			opacity: 0.3
+			transition: .3s
+		&:hover
+			svg
+				opacity: 1
+				path
+					fill: $blue
+	&__list
+		display: flex
+		align-items: center
+		width: calc(100% - 156px)
+		margin-left: auto
+		margin-right: auto
+	&__item
+		position: relative
+		display: flex
+		align-items: center
+		justify-content: center
+		width: 79px
+		height: 78px
+		font-size: 16px
+		font-family: $montserrat
+		font-weight: 300
+		border-right: 1px solid #eee
+		overflow: hidden
+		&:before
+			content: ''
+			position: absolute
+			bottom: 0
+			left: 0
+			right: 0
+			height: 2px
+			transition: .3s
+			background-color: transparent
+		&.--current
+			font-weight: 700
+			&:before
+				background-color: $blue
+		&:hover
+			&:before
+				background-color: $blue
+	&.--block
+		background-color: transparent
+		.pagination
+			&__prev, &__next, &__item
+				border: none
+				width: 70px
+				height: 70px
+				border-radius: 8px
+				background-color: #fff
+			&__list
+				width: calc(100% - 200px)
+				justify-content: space-between
+				margin-left: auto
+				margin-right: auto
+				
+	
+
+.article
+	background-color: #f4f4f4
+	padding-bottom: 120px
+	&__content
+		padding-top: 40px
+	&__img
+		height: 600px
+		overflow: hidden
+		border-radius: 8px
+		margin-bottom: 40px
+		img
+			width: 100%
+			height: 100%
+			object-fit: cover
+
+.t1
+	a
+		color: $blue
+		font-weight: 700
+		&:hover
+			border-color: $blue
+	p
+		font-size: 15px
+		line-height: 23px
+		margin-bottom: 20px
+		&.--md
+			font-size: 18px
+			line-height: 30px
+			margin-bottom: 20px
+	ul
+		flex-direction: column
+		margin-top: 20px
+		margin-bottom: 20px
+		li
+			position: relative
+			padding-left: 47px
+			margin-bottom: 8px
+			&:before
+				content: ''
+				position: absolute
+				top: 7px
+				left: 30px
+				width: 6px
+				height: 6px
+				border-radius: 50%
+				background-color: $blue
+	blockquote
+		padding-top: 15px
+		padding-bottom: 15px
+		padding-left: 30px
+		border-left: 1px solid $blue
+		margin-left: 30px
+		h2
+			margin-top: 0
+			margin-bottom: 5px
+
+	h1, h2, h3, h4, h5, h6, p
+		display: block
+		&:last-child
+			margin-bottom: 0
+	h1
+		font-size: 47px
+		line-height: 66px
+		font-weight: 500
+		letter-spacing: 0.94px
+		text-transform: uppercase
+		font-family: $montserrat
+		margin-left: -3px
+		margin-bottom: 20px
+		strong
+			font-weight: 700
+
+	h2
+		font-size: 20px
+		line-height: 35px
+		letter-spacing: 0.4px
+		text-transform: uppercase
+		font-family: $montserrat
+		margin-top: 35px
+		margin-bottom: 15px
+
+	h3
+		font-size: 18px
+		line-height: 27px
+		font-family: $manrope
+
+	h4
+		font-size: 15px
+		line-height: 27px
+		font-family: $manrope
+
+	h5
+		font-size: 14px
+		line-height: 24px
+		font-weight: 500
+		font-family: $montserrat
+		text-transform: uppercase
+
+	h6
+		font-size: 14px
+		line-height: 23px
+		font-weight: 400
+		font-family: $manrope
+
+
+.more
+	border-top: 1px solid rgba(0,0,0,0.1)
+	margin-top: 65px
+	padding-top: 40px
+	&__title
+		margin-bottom: 40px
+	&__list
+		margin-left: -15px
+		margin-right: -15px
+	&__item
+		width: calc(100% / 3 - 30px)
+		margin-left: 15px
+		margin-right: 15px
+		padding: 30px
+		border-radius: 8px
+		background-color: #ffffff
+		&:hover
+			.more
+				&__icon
+					background-color: $blue
+					svg
+						opacity: 1
+						path
+							fill: #fff
+					
+	&__head
+		position: relative
+		margin-bottom: 25px
+	&__date
+		display: flex
+		align-items: center
+		font-size: 14px
+		border-radius: 8px
+		color: rgba(72,78,81,.8)
+		position: absolute
+		top: 15px
+		left: 15px
+		height: 36px
+		padding-left: 14px
+		padding-right: 14px
+		background-color: #fff
+	&__img
+		height: 200px
+		border-radius: 8px
+		overflow: hidden
+		img
+			width: 100%
+			height: 100%
+			object-fit: cover
+	&__body
+		display: flex
+		align-items: center
+	&__name
+		font-size: 16px
+		line-height: 26px
+		font-weight: 600
+		font-family: $montserrat
+		text-transform: uppercase
+		letter-spacing: 0.32px
+	&__icon
+		display: flex
+		align-items: center
+		justify-content: center
+		min-width: 60px
+		width: 60px
+		height: 60px
+		border-radius: 50%
+		margin-left: 15px
+		transition: .3s
+		border: 1px solid rgba(183,186,187,.4)
+		svg
+			width: 14px
+			opacity: 0.35
+
+
+.jobs
+	padding-bottom: 120px
+	background-color: #f4f4f4
+	&__breadcrumbs
+		margin-bottom: 20px
+	&__title
+		margin-bottom: 12px
+	&__text
+		font-size: 18px
+		font-weight: 300
+		line-height: 27px
+		margin-bottom: 45px
+	&__item
+		display: flex
+		align-items: center
+		min-height: 150px
+		padding: 20px 70px 20px 65px
+		border-top: 1px solid #e4e5e5
+		&:last-of-type
+			border-bottom: 1px solid #e4e5e5
+.job
+	&__text
+		margin-right: 15px
+	&__name
+		color: $blue
+		margin-bottom: 5px
+	&__desc
+		font-size: 14px
+		line-height: 23px
+	&__count
+		margin-left: auto
+		font-size: 20px
+		opacity: 0.5
+		letter-spacing: 0.4px
+		font-family: $montserrat
+		white-space: nowrap
+
+.j-form
+	padding: 55px 60px 60px
+	margin-top: 70px
+	border-radius: 8px
+	background-color: #fff
+	box-shadow: 0 3px 60px rgba(0, 0, 0, 0.08)
+	&__title
+		font-size: 16px
+		font-weight: 700
+		font-family: $montserrat
+		text-transform: uppercase
+		letter-spacing: 0.32px
+		margin-bottom: 27px
+	&__wrap
+		margin-left: -15px
+		margin-right: -15px
+		margin-bottom: -30px
+	&__item
+		width: calc(100% / 3 - 30px)
+		margin-left: 15px
+		margin-right: 15px
+		margin-bottom: 30px
+	&__policy
+		opacity: 0.5
+		font-size: 12px
+		line-height: 19px
+		margin-top: 25px
+
+
+.page404
+	background-color: #f4f4f4
+	&__wrap
+		display: flex
+		align-items: center
+		flex-direction: column
+		text-align: center
+		padding: 80px 20px 115px
+	&__img
+		margin-bottom: 35px
+	&__title
+		font-weight: 500
+		margin-bottom: 10px
+	&__subtitle
+		margin-bottom: 35px
+
+	&__desc
+		opacity: 0.8
+		font-size: 14px
+		margin-top: 24px
+
+.page
+	background-color: #f4f4f4
+	padding-bottom: 120px
+	&__breadcrumbs
+		margin-bottom: 20px
+	&__title
+		margin-top: 20px
+		margin-bottom: 140px
+
+.contacts-p
+	padding-bottom: 140px
+	background-color: #f4f4f4
+	&__breadcrumbs
+		margin-bottom: 20px
+
+.works
+	padding-bottom: 30px
+	background-color: #f4f4f4
+	&__breadcrumbs
+		margin-bottom: 20px
+	&__title
+		margin-bottom: 32px
+	&__list
+		margin-left: -15px
+		margin-right: -15px
+		margin-bottom: -30px
+	&__item
+		width: calc(100% / 2 - 30px)
+		padding: 30px
+		margin-left: 15px
+		margin-right: 15px
+		margin-bottom: 30px
+		border-radius: 8px
+		background-color: #fff
+		&:hover
+			.works
+				&__icon
+					background-color: $blue
+					svg
+						opacity: 1
+						path
+							fill: #fff
+
+	&__img
+		height: 370px
+		overflow: hidden
+		border-radius: 8px
+		margin-bottom: 25px
+		img
+			width: 100%
+			height: 100%
+			object-fit: cover
+	&__name
+		font-size: 16px
+		line-height: 26px
+		font-weight: 500
+		text-transform: uppercase
+		max-width: 480px
+		font-family: $montserrat
+		margin-bottom: 9px
+	&__foot
+		align-items: center
+		margin-top: auto
+	&__data
+		width: calc(100% - 60px)
+		padding-right: 10px
+	&__icon
+		display: flex
+		align-items: center
+		justify-content: center
+		min-width: 60px
+		width: 60px
+		height: 60px
+		border-radius: 50%
+		transition: .3s
+		border: 1px solid rgba(183,186,187,.4)
+		svg
+			width: 14px
+			opacity: 0.35
+
+.work
+	padding-bottom: 30px
+	background-color: #f4f4f4
+	&__breadcrumbs
+		margin-bottom: 35px
+	&__title
+		margin-top: 50px
+		margin-bottom: 50px
+	&__content
+		width: calc(100% - 380px)
+		padding-right: 80px
+	&__gifts
+		width: 380px
+	&__btn
+		display: inline-flex
+		margin-top: 35px
+
+.w-sli
+	&__list
+		position: relative
+		margin-bottom: 30px
+		&-item
+			height: 600px
+			overflow: hidden
+			border-radius: 8px
+			img
+				width: 100%
+				height: 100%
+				object-fit: cover
+	&__arrow
+		&.--prev
+			left: 50px
+		&.--next
+			right: 50px
+	&__thumbs
+		&-item
+			overflow: hidden
+			border-radius: 8px
+			opacity: 0.4
+			transition: .3s
+			cursor: pointer
+			position: relative
+			height: 140px
+			&:before
+				content: ''
+				position: absolute
+				top: 5px
+				left: 5px
+				right: 5px
+				bottom: 5px
+				border: 1px solid #fff
+				border-radius: 8px
+				opacity: 0
+				transition: .3s
+			&.swiper-slide-thumb-active
+				opacity: 1
+				&:before
+					opacity: 0.4
+			img
+				width: 100%
+				height: 100%
+				object-fit: cover
+
+
+.w-gifts
+	border-radius: 8px
+	background-color: #fff
+	&__item
+		position: relative
+		display: flex
+		align-items: center
+		padding: 30px 0 30px 40px
+		border-bottom: 1px solid rgba(183,186,187,.2)
+		&:last-of-type
+			border-bottom: none
+		&:nth-of-type(1)
+			.w-gifts
+				&__img
+					right: -48px
+		&:nth-of-type(2)
+			.w-gifts
+				&__img
+					right: -24px
+		&:nth-of-type(3)
+			.w-gifts
+				&__img
+					right: -44px
+	&__text
+		width: 100%
+		max-width: 275px
+
+	&__name
+		font-size: 14px
+		line-height: 24px
+		font-weight: 500
+		font-family: $montserrat
+		letter-spacing: 0.2px
+		text-transform: uppercase
+		margin-bottom: 6px
+
+	&__desc
+		opacity: 0.9
+		font-size: 14px
+		line-height: 23px
+
+	&__img
+		// margin-left: auto
+		position: absolute
+		top: 50%
+		transform: translateY(-50%)
 
 .footer
 	&__top
