add responive 1500-768px

--- a/source/dev/_/parts/start.pug
+++ b/source/dev/_/parts/start.pug
@@ -9,7 +9,7 @@
 			.start__content
 				.start__desc.h3 Знаете точные размеры помещения #[br]или у вас типовая планировка квартиры?
 				.start__title.h1 Начнём работу #[br]без замера #[br]#[strong со скидкой 5000 ₽]
-				.start__subtitle.bi.--sm
+				.start__subtitle.bi
 					.bi__icon
 						img(src="_/uploads/star-percent-green.png" alt="")
 					.bi__text.h2 Мы готовы сделать скидку в 5000 ₽ #[br]за экономию нашего времени
