--- a/source/dev/_/parts/team.pug
+++ b/source/dev/_/parts/team.pug
@@ -7,25 +7,25 @@
 				.team__position Руководитель #[br]компании
 				.team__img
 					img(src="_/uploads/team-1.png" alt="")
-				a.team__btn.btn.--md.--bg-blue(href="") КОНСУЛЬТАЦИЯ
+				a.team__btn.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") КОНСУЛЬТАЦИЯ
 
 			.team__item
 				.team__name ПЕТР НИКИТИН
 				.team__position Руководитель #[br]компании
 				.team__img
 					img(src="_/uploads/team-2.png" alt="")
-				a.team__btn.btn.--md.--bg-blue(href="") КОНСУЛЬТАЦИЯ
+				a.team__btn.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") КОНСУЛЬТАЦИЯ
 
 			.team__item
 				.team__name ПЕТР НИКИТИН
 				.team__position Руководитель #[br]компании
 				.team__img
 					img(src="_/uploads/team-3.png" alt="")
-				a.team__btn.btn.--md.--bg-blue(href="") КОНСУЛЬТАЦИЯ
+				a.team__btn.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") КОНСУЛЬТАЦИЯ
 
 			.team__item
 				.team__name ПЕТР НИКИТИН
 				.team__position Руководитель #[br]компании
 				.team__img
 					img(src="_/uploads/team-4.png" alt="")
-				a.team__btn.btn.--md.--bg-blue(href="") КОНСУЛЬТАЦИЯ
+				a.team__btn.btn.--md.--bg-blue(href="javascript:;" data-fancybox="" data-src="#modal-callback-messengers") КОНСУЛЬТАЦИЯ
